[package]
name = "rust-sdk"
version = "0.1.0"
authors = ["tanhui <tanhui@corp-ci.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu = "=0.6.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"

[lib]
crate-type = ["cdylib", "rlib"]