[package]
name = "c123chain-cdk"
version = "0.1.0"
authors = ["tanhui <tanhui@corp-ci.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wee_alloc = "0.4.5"

[profile.release]
opt-level = "s"
lto = true

[features]
std = []