[package]
name = "c123chain-cdk-proc"
version = "0.1.0"
authors = ["tanhui <tanhui@corp-ci.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.48", features = ["full", "extra-traits"] }
quote = { version = "1.0.7" }
proc-macro2 = { version = "1.0.24" }
proc-macro-error = { version = "1.0.4" }
hex = { path = "../hex/" }

[lib]
proc-macro = true
